# Progetto-C

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/cli/: CMakeLists.txt  cli.c  cli.h
src/file_manager/: CMakeLists.txt  file_manager.c  file_manager.h
src/filter/: CMakeLists.txt  filter.c  filter.h
src/filters/: CMakeLists.txt  filters.c  filters.h
src/interface/: CMakeLists.txt  interface.h
src/reports/: CMakeLists.txt  reports.c  reports.h
src/search/: CMakeLists.txt  search.c  search.h
src/sort/: CMakeLists.txt  sort.c  sort.h
src/stats/: CMakeLists.txt  stats.c  stats.h
src/ware/: CMakeLists.txt  ware.c  ware.h
src/web/: CMakeLists.txt  web.c  web.h
